--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
@@ -19,7 +20,8 @@
     "md5": "^2.3.0",
     "mongoose": "^8.9.5",
     "pug": "^3.0.3",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
