--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "pug": "^3.0.3",
     "socket.io": "^4.8.0",
     "streamifier": "^0.1.1"
